--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,10 @@ name = "mp4parse"
 version = "0.0.1"
 authors = ["Ralph Giles <giles@mozilla.com>"]
 
+description = "Parser for ISO base media file format (mp4)"
+license = "https://mozilla.org/MPL/2.0/"
+
+repository = "https://notabug.org/rillian/mp4parse-rust"
+
 [dependencies]
 byteorder = "0.3.8"
