Update dump.cc for capi changes.
We now need to allocate and pass in a context struct.
Verify bad argument rejection with and without a valid struct.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -6,7 +6,7 @@ all: test
 check: all
 	./test
 
-CXXFLAGS = -g -Wall -std=c++1y
+CXXFLAGS = -g -Wall -std=c++1y -I../include
 RUST_LIBS = -ldl -lpthread -lrt -lgcc_s -lpthread -lc -lm
 
 RUST_SRCS := ../src/lib.rs
