Automate C header generation with rusty-cheddar.
Note that the generated header is not identical or compatible with the old
mp4parse.h.  This will be addressed in subsequent patches by altering the
Rust code to suit rusty-cheddar's code generation.

Build with '--features cheddar' to generate include/mp4parse.h.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,17 @@ exclude = [
   "*.mp4",
 ]
 
+build = "build.rs"
+
 [dependencies]
 byteorder = "0.4.2"
 
 [dev-dependencies]
 test-assembler = "0.1.0"
+
+[build-dependencies]
+rusty-cheddar = { version = "0.3.0", optional = true }
+
+[features]
+cheddar = ["rusty-cheddar"]
+
