Enable cheddar feature by default.
Our primary target is C, so it doesn't make sense for this to
be an optional feature in the build, and it multiplies our
test configurations. Pulling all the dependencies slows down
the ci cycle time considerably though.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,4 @@ byteorder = "0.4.2"
 test-assembler = "0.1.0"
 
 [build-dependencies]
-rusty-cheddar = { version = "0.3.1", optional = true }
-
-[features]
-cheddar = ["rusty-cheddar"]
-
+rusty-cheddar = "0.3.1"
