travis: Pull in g++-4.8 for C++11 support.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,10 @@ language: rust
 rust:
   - stable
   - nightly
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r/test
+    packages:
+      - g++-4.8
