--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ rust:
 addons:
   apt:
     sources:
-      - ubuntu-toolchain-r/test
+      - ubuntu-toolchain-r-test
     packages:
       - g++-4.8
