--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,7 @@ rusty-cheddar = "0.3.1"
 
 [features]
 fuzz = ["afl", "afl-plugin", "abort_on_panic"]
+
+# Somewhat heavy-handed, but we want at least -Z force-overflow-checks=on.
+[profile.release]
+debug-assertions = true
