--- a/examples/Makefile
+++ b/examples/Makefile
@@ -9,10 +9,13 @@ check: all
 HEADER := ../include/mp4parse.h
 CXXFLAGS = -g -Wall -std=c++11 -I$(dir $(HEADER))
 
+CRATE_DIR := ../target/debug/deps
+CRATE_LIBC := $(wildcard $(CRATE_DIR)/liblibc*.rlib)
+
 libmp4parse.a libmp4parse.a.out : ../src/lib.rs
 	rustc -g --crate-type staticlib --crate-name mp4parse \
-	  --emit dep-info,link=$@ -L \
-	  ../target/debug/deps/ $< \
+	  --emit dep-info,link=$@ --extern libc=$(CRATE_LIBC) \
+	  -L $(CRATE_DIR) $< \
 	  2> libmp4parse.a.out || cat libmp4parse.a.out >&2
 
 -include mp4parse.d
