Build and upload documentation on travis runs.
Call `cargo doc` to generate documentation for our crate and
our dependencies. Use travis-ci.org's support for surge.sh
to deploy the documentation.

Note that this deploys twice for every master push, once
for the stable build, and once for nightly. I couldn't
figure out how to deploy only one variant.

Based on https://docs.travis-ci.com/user/deployment/surge

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,10 @@ script:
   - cargo build --verbose
   - cargo test --verbose
   - make -C examples
+  - cargo doc
+
+deploy:
+  provider: surge
+  project: ./target/doc/
+  domain: mp4parse-docs.surge.sh
+  skip_cleanup: true
