--- a/mp4parse_capi/Cargo.toml
+++ b/mp4parse_capi/Cargo.toml
@@ -21,6 +21,7 @@ exclude = [
 build = "build.rs"
 
 [dependencies]
+byteorder = "0.5.0"
 "mp4parse" = {version = "0.6.0", path = "../mp4parse"}
 
 [build-dependencies]
