Add travis badge link for crates.io.
The package repository now has support for continuous integration
status badges. Add links for these.

--- a/mp4parse/Cargo.toml
+++ b/mp4parse/Cargo.toml
@@ -19,6 +19,9 @@ exclude = [
   "*.mp4",
 ]
 
+[badges]
+travis-ci = { repository = "https://github.com/mozilla/mp4parse-rust" }
+
 [dependencies]
 byteorder = "1.0.0"
 afl = { version = "0.1.1", optional = true }
