--- a/mp4parse/Cargo.toml
+++ b/mp4parse/Cargo.toml
@@ -28,6 +28,7 @@ afl = { version = "0.1.1", optional = true }
 afl-plugin = { version = "0.1.1", optional = true }
 abort_on_panic = { version = "1.0.0", optional = true }
 bitreader = { version = "0.3.0" }
+num-traits = "0.1.37"
 
 [dev-dependencies]
 test-assembler = "0.1.2"
