--- a/mp4parse_capi/Cargo.toml
+++ b/mp4parse_capi/Cargo.toml
@@ -29,7 +29,7 @@ mp4parse = {version = "0.7.1", path = "../mp4parse"}
 num-traits = "0.1.37"
 
 [build-dependencies]
-rusty-cheddar = "0.3.2"
+rusty-cheddar = { git = "https://github.com/kinetiknz/rusty-cheddar" }
 
 [features]
 fuzz = ["mp4parse/fuzz"]
