Move documentation links to docs.rs.
Link to the published crate documentation builds done by docs.rs
instead of deploying our own to surge.sh. This means we don't
get a devolopment version of the docs from the master branch,
but can take advantage of the unified interface available
to all crates.

--- a/mp4parse/Cargo.toml
+++ b/mp4parse/Cargo.toml
@@ -8,7 +8,7 @@ authors = [
 ]
 
 description = "Parser for ISO base media file format (mp4)"
-documentation = "https://mp4parse-docs.surge.sh/mp4parse/"
+documentation = "https://docs.rs/mp4parse/"
 license = "MPL-2.0"
 categories = ["multimedia::video"]
 
