add fallible memory allocation for vector

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [workspace]
 members = [
     "mp4parse",
-    "mp4parse_capi"
+    "mp4parse_capi",
+    "fallible"
 ]
 
 # Somewhat heavy-handed, but we want at least -Z force-overflow-checks=on.
