--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 members = [
     "mp4parse",
     "mp4parse_capi",
-    "fallible"
+    "mp4parse_fallible"
 ]
 
 # Somewhat heavy-handed, but we want at least -Z force-overflow-checks=on.
