--- a/mp4parse/Cargo.toml
+++ b/mp4parse/Cargo.toml
@@ -29,7 +29,7 @@ afl-plugin = { version = "0.1.1", optional = true }
 abort_on_panic = { version = "1.0.0", optional = true }
 bitreader = { version = "0.3.0" }
 num-traits = "0.1.37"
-fallible = { path = "../fallible" }
+mp4parse_fallible = { path = "../mp4parse_fallible" }
 
 [dev-dependencies]
 test-assembler = "0.1.2"
