--- a/mp4parse/Cargo.toml
+++ b/mp4parse/Cargo.toml
@@ -29,6 +29,8 @@ afl-plugin = { version = "0.1.1", optional = true }
 abort_on_panic = { version = "1.0.0", optional = true }
 bitreader = { version = "0.3.0" }
 num-traits = "0.1.37"
+
+[target.'cfg(feature = "fallible_memory_allocation")'.dependencies]
 mp4parse_fallible = { git = "https://github.com/alfredoyang/mp4parse_fallible" }
 
 [dev-dependencies]
