--- a/mp4parse/Cargo.toml
+++ b/mp4parse/Cargo.toml
@@ -29,13 +29,10 @@ afl-plugin = { version = "0.1.1", optional = true }
 abort_on_panic = { version = "1.0.0", optional = true }
 bitreader = { version = "0.3.0" }
 num-traits = "0.1.37"
-
-[target.'cfg(feature = "fallible_memory_allocation")'.dependencies]
-mp4parse_fallible = { git = "https://github.com/alfredoyang/mp4parse_fallible" }
+mp4parse_fallible = { git = "https://github.com/alfredoyang/mp4parse_fallible", optional = true }
 
 [dev-dependencies]
 test-assembler = "0.1.2"
 
 [features]
 fuzz = ["afl", "afl-plugin", "abort_on_panic"]
-
