--- a/mp4parse_capi/Cargo.toml
+++ b/mp4parse_capi/Cargo.toml
@@ -25,6 +25,9 @@ travis-ci = { repository = "https://github.com/mozilla/mp4parse-rust" }
 
 [dependencies]
 byteorder = "1.0.0"
+
+# To enable fallible memory allocation, add 'features = ["mp4parse_fallible"]'
+# in mp4parse brace.
 mp4parse = {version = "0.8.0", path = "../mp4parse"}
 num-traits = "0.1.37"
 
