--- a/mp4parse/Cargo.toml
+++ b/mp4parse/Cargo.toml
@@ -24,8 +24,7 @@ travis-ci = { repository = "https://github.com/mozilla/mp4parse-rust" }
 
 [dependencies]
 byteorder = "1.0.0"
-afl = { version = "0.1.1", optional = true }
-afl-plugin = { version = "0.1.1", optional = true }
+afl = { version = "0.3", optional = true }
 abort_on_panic = { version = "1.0.0", optional = true }
 bitreader = { version = "0.3.0" }
 num-traits = "0.1.37"
@@ -35,4 +34,4 @@ mp4parse_fallible = { version = "0.0.1", optional = true }
 test-assembler = "0.1.2"
 
 [features]
-fuzz = ["afl", "afl-plugin", "abort_on_panic"]
+fuzz = ["afl", "abort_on_panic"]
