--- a/mp4parse_capi/Cargo.toml
+++ b/mp4parse_capi/Cargo.toml
@@ -23,7 +23,6 @@ travis-ci = { repository = "https://github.com/mozilla/mp4parse-rust" }
 
 [dependencies]
 byteorder = "1.2.1"
-env_logger = "0.5.3"
 log = "0.4"
 
 # To enable fallible memory allocation, add 'features = ["mp4parse_fallible"]'
@@ -31,9 +30,11 @@ log = "0.4"
 mp4parse = {version = "0.10.0", path = "../mp4parse"}
 num-traits = "0.2.0"
 
+[dev-dependencies]
+env_logger = "0.5.3"
+
 [build-dependencies]
 cbindgen = "0.4.3"
 
 [features]
 fuzz = ["mp4parse/fuzz"]
-
