--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ mp4parse_capi/examples/libmp4parse.a
 mp4parse_capi/examples/libmp4parse.a.out
 mp4parse_capi/examples/mp4parse.d
 mp4parse_capi/examples/test.o
+target/
+Cargo.lock
