--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ members = [
     "mp4parse_capi",
 ]
 
-# Somewhat heavy-handed, but we want at least -Z force-overflow-checks=on.
 [profile.release]
-debug-assertions = true
+overflow-checks = true
 
+[profile.bench]
+overflow-checks = true
