--- a/mp4parse_capi/fuzz/Cargo.toml
+++ b/mp4parse_capi/fuzz/Cargo.toml
@@ -21,3 +21,7 @@ members = ["."]
 [[bin]]
 name = "fuzz_target_1"
 path = "fuzz_targets/fuzz_target_1.rs"
+
+[[bin]]
+name = "avif"
+path = "fuzz_targets/avif.rs"
