Fix travis config to properly combine env var values
We want the 4 combinations of --release and --all-features being enabled,
not 2 jobs with neither and one job with just one of each.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ os:
   
 env:
   matrix:
-    - RELEASE=
-    - RELEASE=--release
-    - FEATURES=
-    - FEATURES=--all-features
+    - RELEASE= FEATURES=
+    - RELEASE=--release FEATURES=
+    - RELEASE= FEATURES=--all-features
+    - RELEASE=--release FEATURES=--all-features
 
 script:
   - cargo test --all --verbose $RELEASE $FEATURES
