--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,12 @@ env:
     - RELEASE=--release
 
 script:
-  # We cannot run `cargo test` with the mp4parse_infallible feature enabled
-  # (see comment where the feature is defined in Cargo.toml), but we can at
-  # least check for changes behind features that would break the build.
-  - cargo check --all --verbose $RELEASE --tests --all-features
   - cargo test --all --verbose $RELEASE
+  # We cannot run `cargo test` with the mp4parse_infallible feature enabled
+  # (see comment where the feature is defined in mp4parse_capi/Cargo.toml),
+  # but we can at least check for changes behind features that would break the
+  # build. Also note that we can't run `cargo check` before `cargo test` or
+  # else it breaks `build_ffi_test` for complicated reasons.
+  # See https://github.com/mozilla/mp4parse-rust/issues/197
+  - cargo check --all --verbose $RELEASE --tests --all-features
   - cargo doc --package mp4parse_capi
