--- a/mp4parse_capi/Cargo.toml
+++ b/mp4parse_capi/Cargo.toml
@@ -18,6 +18,9 @@ exclude = [
   "*.mp4",
 ]
 
+[lib]
+crate-type = ["lib", "cdylib"]
+
 [badges]
 travis-ci = { repository = "https://github.com/mozilla/mp4parse-rust" }
 
