--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ env:
     - RELEASE=--release
 
 before_script:
-- rustup component add rustfmt
+# rustfmt may not always be available in nightly
+- if [[ "$TRAVIS_RUST_VERSION" != *nightly* ]]; then rustup component add rustfmt; fi
 
 script:
   - cargo test --all --verbose $RELEASE
@@ -26,4 +27,5 @@ script:
   # See https://github.com/mozilla/mp4parse-rust/issues/197
   - cargo check --all --verbose $RELEASE --tests --all-features
   - cargo doc --package mp4parse_capi
-  - cargo fmt -- --check || echo "Please reformat your code with 'cargo fmt' (version $(cargo fmt -- --version))"
+  # The `false` after `echo` is necessary to avoid false negatives due to `echo` returning success
+  - if [[ "$TRAVIS_RUST_VERSION" != *nightly* ]]; then cargo fmt -- --check || (echo "Please reformat your code with 'cargo fmt' (version $(cargo fmt -- --version))"; false); fi
