Update mp4parse_capi for standard mozilla vendoring
- Remove build.rs in favor of executing cbindgen externally
- Remove cbindgen build dependency
- Add cbindgen.toml for generated bindings preferences

And corresponding changes to test_ffi:
- Generate mp4parse_capi header in build.rs
- Configure cbindgen via cbindgen.toml
- Put generated code in out OUT_DIR
- Include generated code indirectly, as mozilla tree does

See https://bugzilla.mozilla.org/show_bug.cgi?id=1624056

--- a/test_ffi/Cargo.toml
+++ b/test_ffi/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2018"
 mp4parse_capi = { path = "../mp4parse_capi" }
 
 [build-dependencies]
+cbindgen = "0.14.2"
 mp4parse_capi = { path = "../mp4parse_capi" }
 cc = "1.0"
