--- a/mp4parse_capi/fuzz/Cargo.toml
+++ b/mp4parse_capi/fuzz/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 cargo-fuzz = true
 
 [dependencies]
-libfuzzer-sys = "0.3"
+libfuzzer-sys = "=0.3.2"
 
 [dependencies.mp4parse_capi]
 path = ".."
