--- a/mp4parse_capi/fuzz/Cargo.toml
+++ b/mp4parse_capi/fuzz/Cargo.toml
@@ -13,6 +13,7 @@ libfuzzer-sys = "=0.3.2"
 
 [dependencies.mp4parse_capi]
 path = ".."
+features = ["mp4parse_fallible"]
 
 # Prevent this from interfering with workspaces
 [workspace]
