--- a/mp4parse/Cargo.toml
+++ b/mp4parse/Cargo.toml
@@ -27,10 +27,10 @@ travis-ci = { repository = "https://github.com/mozilla/mp4parse-rust" }
 [dependencies]
 byteorder = "1.2.1"
 bitreader = { version = "0.3.2" }
-env_logger = "0.7.1"
+env_logger = "0.8"
 fallible_collections = { version = "0.3", features = ["std_io"] }
 hashbrown = "0.9"
-num-traits = "=0.2.10"
+num-traits = "0.2.14"
 log = "0.4"
 static_assertions = "1.1.0"
 
