--- a/mp4parse_capi/Cargo.toml
+++ b/mp4parse_capi/Cargo.toml
@@ -27,7 +27,7 @@ byteorder = "1.2.1"
 fallible_collections = { version = "0.3", features = ["std_io"] }
 log = "0.4"
 mp4parse = {version = "0.11.2", path = "../mp4parse"}
-num-traits = "=0.2.10"
+num-traits = "0.2.14"
 
 [dev-dependencies]
-env_logger = "0.7.1"
+env_logger = "0.8"
