--- a/mp4parse/Cargo.toml
+++ b/mp4parse/Cargo.toml
@@ -40,6 +40,9 @@ test-assembler = "0.1.2"
 walkdir = "2.3.1"
 criterion = "0.3"
 
+[features]
+3gpp = []
+
 [[bench]]
 name = "avif_benchmark"
 harness = false
