Put rust "3gpp" feature code behind MP4PARSE_FEATURE_3GPP define in FFI headers

--- a/mp4parse_capi/cbindgen.toml
+++ b/mp4parse_capi/cbindgen.toml
@@ -15,3 +15,6 @@ cpp_compat = true
 
 [enum]
 rename_variants = "QualifiedScreamingSnakeCase"
+
+[defines]
+"feature = 3gpp" = "MP4PARSE_FEATURE_3GPP"
