--- a/mp4parse_capi/cbindgen.toml
+++ b/mp4parse_capi/cbindgen.toml
@@ -18,3 +18,4 @@ rename_variants = "QualifiedScreamingSnakeCase"
 
 [defines]
 "feature = 3gpp" = "MP4PARSE_FEATURE_3GPP"
+"feature = meta-xml" = "MP4PARSE_FEATURE_META_XML"
