Move `create_sample_table`, `sample_to_chunk_iter`, `media_time_to_us`, `track_time_to_us` `Mp4parseIndice` and `Mp4parseTrackType` to `mp4parse` crate, as they are not part of the exposed C API and can be also useful from Rust

--- a/mp4parse_capi/cbindgen.toml
+++ b/mp4parse_capi/cbindgen.toml
@@ -19,3 +19,11 @@ rename_variants = "QualifiedScreamingSnakeCase"
 [defines]
 "feature = 3gpp" = "MP4PARSE_FEATURE_3GPP"
 "feature = meta-xml" = "MP4PARSE_FEATURE_META_XML"
+
+[parse]
+parse_deps = true
+include = ["mp4parse"]
+
+[export.rename]
+"Indice" = "Mp4parseIndice"
+"TrackType" = "Mp4parseTrackType"
