Add clippy run with all features enabled
This should be a low-cost way to identify easily-fixed issues in code that will be missed by standard CI run against only default features

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,9 +44,13 @@ jobs:
       shell: bash
       run: rustup run ${{ matrix.rust }} cargo fmt --all -- --check
 
-    - name: Clippy
+    - name: Clippy (default features)
       shell: bash
       run: rustup run ${{ matrix.rust }} cargo clippy --all --bins --all-targets --examples --benches --tests -- -D warnings 
+
+    - name: Clippy (all features)
+      shell: bash
+      run: rustup run ${{ matrix.rust }} cargo clippy --all --all-features --bins --all-targets --examples --benches --tests -- -D warnings 
 
     - name: Test (release)
       shell: bash
