Add `cargo doc` to CI
This was present in the travis configuration that was removed in https://github.com/mozilla/mp4parse-rust/commit/f3c5f88d93da28c6c6dcd6d352d5ba9baab3b354. It remains useful since it can catch errors in the rustdoc such as in https://travis-ci.org/github/mozilla/mp4parse-rust/jobs/774702058

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,6 +62,13 @@ jobs:
       run: rustup run ${{ matrix.rust }} cargo test --all --verbose
       if: ${{ !matrix.release }}
 
+    - name: Doc (release)
+      shell: bash
+      run: rustup run ${{ matrix.rust }} cargo doc --document-private-items
+      env:
+        RUSTDOCFLAGS: "-Dwarnings"
+      if: matrix.release
+
     # cargo-fuzz supports x86-64 Linux and x86-64 macOS, but macOS currently fails, see:
     # https://github.com/mozilla/mp4parse-rust/pull/210#issuecomment-597420191
     - name: Install cargo-fuzz
