Identify and report on unsupported features and related improvements
- Identify specific features which are unsupported when encountedred
  and report via C API:
  - A1lx (LayeredImageIndexing)
  - A1op (OperatingPointSelector)
  - Clap (CleanAperture)
  - Grid (Grid-based multi-part images)
  - Ipro (ItemProtectionBox)
  - Lsel (LayerSelection)
  - Avis (Image sequence/animation)
- Update version 0.12.0 -> 0.13.0 due to API changes
- Add submodule for link-u-avif-sample-images
- Adds support for `PixelAspectRatio` (`pasp`) property
- Resolves https://github.com/mozilla/mp4parse-rust/issues/290
- Resolves https://github.com/mozilla/mp4parse-rust/issues/343
- See https://github.com/mozilla/mp4parse-rust/issues/354 (partial idat implementation)
- Resolves usize overflow https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=41656

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,6 @@
 name: Build
+env:
+  RUST_BACKTRACE: 1
 
 on:
   push:
@@ -55,12 +57,12 @@ jobs:
 
     - name: Test (release)
       shell: bash
-      run: rustup run ${{ matrix.rust }} cargo test --all --features "${{ matrix.features }}" --verbose --release
+      run: rustup run ${{ matrix.rust }} cargo test --all --features "${{ matrix.features }}" --verbose --release -- --nocapture
       if: matrix.release
 
     - name: Test (debug)
       shell: bash
-      run: rustup run ${{ matrix.rust }} cargo test --all --features "${{ matrix.features }}" --verbose
+      run: rustup run ${{ matrix.rust }} cargo test --all --features "${{ matrix.features }}" --verbose -- --nocapture
       if: ${{ !matrix.release }}
 
     - name: Doc (release)
