Avoid packaging AVIF test files (like we do for MP4 already).

--- a/mp4parse/Cargo.toml
+++ b/mp4parse/Cargo.toml
@@ -19,6 +19,7 @@ repository = "https://github.com/mozilla/mp4parse-rust"
 # Avoid complaints about trying to package test files.
 exclude = [
   "*.mp4",
+  "*.avif",
   "av1-avif/*"
 ]
 
