--- a/mp4parse_capi/Cargo.toml
+++ b/mp4parse_capi/Cargo.toml
@@ -18,6 +18,7 @@ repository = "https://github.com/mozilla/mp4parse-rust"
 # Avoid complaints about trying to package test files.
 exclude = [
   "*.mp4",
+  "*.avif",
 ]
 
 [badges]
