Add HEVC support.

--- a/mp4parse_capi/Cargo.toml
+++ b/mp4parse_capi/Cargo.toml
@@ -39,3 +39,4 @@ missing-pixi-permitted = ["mp4parse/missing-pixi-permitted"]
 3gpp = ["mp4parse/3gpp"]
 meta-xml = ["mp4parse/meta-xml"]
 mp4v = ["mp4parse/mp4v"]
+hevc = ["mp4parse/hevc"]
