--- a/mp4parse_capi/cbindgen.toml
+++ b/mp4parse_capi/cbindgen.toml
@@ -20,6 +20,7 @@ rename_variants = "QualifiedScreamingSnakeCase"
 "feature = 3gpp" = "MP4PARSE_FEATURE_3GPP"
 "feature = meta-xml" = "MP4PARSE_FEATURE_META_XML"
 "feature = unstable-api" = "MP4PARSE_UNSTABLE_API"
+"feature = hevc" = "MP4PARSE_FEATURE_HEVC"
 
 [parse]
 parse_deps = true
