CI: Fix syntax for rustup components.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
         submodules: recursive
 
     - name: Install Rust
-      run: rustup toolchain install ${{ matrix.rust }} --profile minimal --component rustfmt clippy
+      run: rustup toolchain install ${{ matrix.rust }} --profile minimal --component rustfmt,clippy
 
     - name: Check format
       shell: bash
